# mementos

./: .gitignore  .gitmodules  Makefile  Makefile.app  Makefile.common.in  Makefile.config  Makefile.flags  Makefile.target  README-BUILD.txt  configure  mementos.c  mementos_fram.c  mementos_main.c
autoconf/: configure.ac
include/: common.h  fr5969.h  mementos.h  mementos_fram.h
libmementos/: Makefile  Makefile.config  Makefile.options
libmementos/bld/: .gitignore  Makefile
libmementos/bld/clang/: Makefile
libmementos/src/: mementos.c  mementos_fram.c
libmementos/src/include/libmementos/: mementos.h
llvm/: CMakeLists.txt
llvm/include/mementos/: Mementos.h
llvm/lib/Mementos/: CMakeLists.txt  InstrumentAllFunctionReturns.cpp
